fixed some spacing issues for min-width

--- a/webDev_2017/myTimes/styles/style.css
+++ b/webDev_2017/myTimes/styles/style.css
@@ -53,6 +53,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 75%;
+  min-width: 670px;
 }
 
 #main {
@@ -78,7 +79,7 @@ body {
 
 #main .image {
   background-image: url("../img/img-story-main.png");
-  width: 629px;
+  width: 630px;
   height: 300px;
 }
 
